public/stylesheets/style.css
html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
}

header {
  background-color: #333;
  color: white;
  text-align: center;
  font-size: 1.2rem;
  padding: 20px;
}

a {
  color: #00b7ff;
  font-size: 20px;
  text-decoration: none;
  transition: color 0.3s, text-decoration 0.3s;
}

a:hover {
  color: white;
  text-decoration: underline;
}

header h1 {
  margin: 0;
}

header nav ul {
  display: flex;
  justify-content: center;
  gap: 20px;
  list-style: none;
  padding: 0;
  margin: 10px 0 0;
}

main {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;

  gap: 20px;
  background-color: darkslategrey;
  flex-wrap: wrap;
  h1 {
    color: white;
  }
}

.welcome {
  display: flex;
  flex-direction: column;
  gap: 10px;
  color: white;
  text-align: start;
}
.message-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  color: white;
  text-align: start;
  height: 100%;
}
.messages {
  display: flex;
  flex-direction: column;
  gap: 10px;
  color: white;
  text-align: start;
  height: 100%;
}
.message {
  display: grid;
  grid-template-rows: auto auto auto;
  grid-template-columns: 1fr 1fr;
  background-color: #f9f9f9;
  padding: 10px;
  border-radius: 10px;
  color: black;
  box-shadow: #333 0 0 20px;
  gap: 10px;
}
.message h3 {
  display: flex;
  grid-column: 1 / span 2;
  justify-content: center;
  margin: 0px;
}
.message-text {
  grid-column: 1 / span 2;
  margin: 0px;
}
.message-author {
  grid-row: 3/4;
  grid-column: 1 / 3;
  margin: 0px;
}

.container {
  display: flex;
  flex-direction: column;
  width: 500px;

  gap: 20px;
  text-align: center;
  height: 100%;
  gap: 10px;
  color: white;
  p {
    font-size: 1.2rem;
  }
  label {
    color: black;
  }
  img {
    max-width: 500px;
    border-radius: 10px;
  }
}

.form-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-width: 500px;

  padding: 20px;

  border: 1px solid #333;
  border-radius: 10px;
  background-color: #f9f9f9;
  box-shadow: #333 0 0 20px;
}

.form-control {
  display: flex;
  flex-direction: column;
  gap: 5px;
  border: 1px solid #333;
  padding: 10px;
  border-radius: 5px;
  background-color: white;
}

/* Form Label Styles */
.form-label {
  display: block;
  font-weight: bold;
  margin-bottom: 0.5em;
  color: #333;
}

/* Form Input Styles */
.form-input {
  width: 100%;
  padding: 0.75em;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-bottom: 1em;
  font-size: 1em;
  transition: border-color 0.3s ease;
}

.form-input:focus {
  border-color: #007bff;
  outline: none;
}
.hint {
  color: #333;
  font-size: 0.8rem;
}

/* Button Styles */
.btn {
  background-color: #333;
  color: white;
  padding: 10px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.btn-primary {
  background-color: #007bff;
}

.btn:hover {
  background-color: #555;
}

.error {
  color: red;
  font-size: 0.8rem;
}
.alert {
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
  font-size: 1rem;
}

.alert-danger {
  color: #721c24;
  background-color: #f8d7da;
  border-color: #f5c6cb;
}

.alert-success {
  color: #155724;
  background-color: #d4edda;
  border-color: #c3e6cb;
}

footer {
  background-color: #333;
  color: white;
  padding: 10px 0;
  text-align: center;
  position: sticky;
  bottom: 0;
  width: 100%;
}

@media screen and (max-width: 400px) {
  .secret-image {
    width: 100%;
  }
  .container {
    width: 100%;
  }
}

